<resources>
    <string name="app_name">praktikum10</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
</resources>