<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="169dp">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="16dp"
                android:gravity="start"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_item_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/author"
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_category" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="By"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_category" />

            <TextView
                android:id="@+id/dot0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="1dp"
                android:text="·"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_item_author"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_category" />

            <TextView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="1dp"
                android:text="·"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_item_publisher"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_category" />

            <TextView
                android:id="@+id/tv_item_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/publisher"
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/dot0"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_category" />

            <TextView
                android:id="@+id/tv_item_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:paddingHorizontal="16dp"
                android:text="@string/category"
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingHorizontal="16dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_category"
                app:layout_constraintVertical_bias="0.26"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/date"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/dot"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_category" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>